// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should change selected icon when using selected-icon prop 1`] = `
<div class="r-ellipsis r-tree-select__item r-tree-select__item--active">
  city1
  <i class="r-badge__wrapper r-icon r-tree-select__selected">
  </i>
</div>
`;

exports[`should render content slot correctly 1`] = `
<div class="r-tree-select"
     style="height: 300px;"
>
  <div role="tablist"
       class="r-sidebar r-tree-select__nav"
  >
    <div role="tab"
         class="r-sidebar-item r-sidebar-item--select r-tree-select__nav-item"
         tabindex="0"
         aria-selected="true"
    >
      <div class="r-badge__wrapper r-sidebar-item__text">
        group1
      </div>
    </div>
  </div>
  <div class="r-tree-select__content">
    Custom Content
  </div>
</div>
`;

exports[`should render empty TreeSelect correctly 1`] = `
<div class="r-tree-select"
     style="height: 300px;"
>
  <div role="tablist"
       class="r-sidebar r-tree-select__nav"
  >
  </div>
  <div class="r-tree-select__content">
  </div>
</div>
`;

exports[`should render nav badge correctly 1`] = `
<div class="r-tree-select"
     style="height: 300px;"
>
  <div role="tablist"
       class="r-sidebar r-tree-select__nav"
  >
    <div role="tab"
         class="r-sidebar-item r-sidebar-item--select r-tree-select__nav-item"
         tabindex="0"
         aria-selected="true"
    >
      <div class="r-badge__wrapper r-sidebar-item__text">
        group1
        <div class="r-badge r-badge--top-right r-badge--danger r-badge--fixed">
          3
        </div>
      </div>
    </div>
  </div>
  <div class="r-tree-select__content">
  </div>
</div>
`;
